fix(book): button on mobile

--- a/src/pages/styles/book.module.css
+++ b/src/pages/styles/book.module.css
@@ -113,7 +113,7 @@
 }
 
 .book .buttonWrapper {
-  width: 30rem;
+  max-width: 30rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
